@@ -1,4 +1,5 @@
 5.1.5 -> 5.1.6:
+    - jbj: add --whatconflicts/--whatobsoletes.
     - jbj: fix: adding Fstat() broke perl builds.
     - jbj: generate Obsoletename index in rpmdb.
     - jbj: generate Filepaths index in rpmdb.
